# jupyter

./: .Strings.ipynb.swp  .gitignore  .pre-commit-config.yaml  .prettierignore  Array.ipynb  BitTwiddling.ipynb  CLAUDE.md  ElegantPython.ipynb  Heap.ipynb  HtmlToMarkdown.ipynb  InterviewPythonTips.ipynb  Math.ipynb  PickYourProject.ipynb  Pipfile  PlayAnimation.ipynb  PlayCrypto.ipynb  PlayCustomerData.ipynb  PlayCustomerData.py  PlayML.ipynb  PlayNLP.ipynb  PlayNLP.py  ProductivityGraphs.ipynb  README.md  Recursion.ipynb  SleepAnalysis.ipynb  StackAndQueue.ipynb  Strings.ipynb  SubArray.ipynb  TF-IFD.ipynb  Technology vs Entrepreneur.ipynb  Tree Questions.ipynb  Trees.ipynb  WeekAnalysis.ipynb  Weight Analysis.ipynb  apt.txt  biome.json  diff_staged_nb.sh  environment.yml  justfile  marimo_weight_analysis.html  (+13 more)
.claude/agents/: code-review-expert.md  conversation-log-publisher.md  image-content-analyzer.md  pr-description-updater.md  youtube-content-processor.md
data/: HealthAutoExport-2010-03-03-2025-05-30.json  HealthAutoExport-2010-03-03-2025-11-15.csv  Weight.csv  metrics-2024-03-08.csv  metrics-2024-09-01.csv  metrics-2025-05-27.csv  sleep.csv  weight.csv
py_generated/: Array.py  BitTwiddling.py  ElegantPython.py  Heap.py  HtmlToMarkdown.py  InterviewPythonTips.py  Math.py  PickYourProject.py  PlayAnimation.py  PlayCustomerData.py  PlayML.py  PlayNLP.py  ProductivityGraphs.py  Recursion.py  SleepAnalysis.py  StackAndQueue.py  Strings.py  SubArray.py  TF-IFD.py  Technology vs Entrepreneur.py  Tree Questions.py  Weight Analysis.py  pandasPdfCdf.py  play-opencv.py  stock_analysis.py  sympy.py
python/: Array.py  BitTwiddling.py  Heap.py  Math.py  PlayML.py  PlayNLP.py  Recursion.py  StackAndQueue.py  Strings.py  SubArray.py  Technology vs Entrepreneur.py  Tree Questions.py  Weight Analysis.py  pandasPdfCdf.py
scripts/: capture_marimo_screenshots.py
tests/: test_empty.py
