[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idvorkin-jupyter"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.10"


dependencies = [
    "arrow",
    "altair",
    "ipython",
    "matplotlib",
    "matplotlib-venn",
    "pandas_datareader",
    "nbdime",
    "pandas",
    "pdfrw",
    "seaborn",
    "scikit-learn",
    "mypy",
    "nltk",
    "wordcloud",
    "spacy",
    "jupytext",
    "humanize",
    "lime",
    "sympy",
    "beautifulsoup4",
    "dask",
    "fsspec",
    "numpy",
    "opencv-python",
    "pillow",
    "icecream",
    "imutils",
    "imgaug",
]

[tool.setuptools]
py-modules = ["PlayNLP"]

[tool.pyright]
# ...
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "jupyter",
    "jupyterlab-vim",
    "jupyterlab>=4.2",
    "jupyterlab-lsp",
    "jupyter_contrib_nbextensions",
    "nbdime",
    "pytest",
    "marimo",
    "playwright>=1.56.0",
]
